Mejora en todos los modelos, ahora permite cargar automaticamente las fechas de creacion y actualizacion.
Tambien cree un script para cargar automaticamente unos registros de prueba.
Cargar datos Funcional v2

y para borrar todos los registros de un plumaso

Vaciar Registros.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.password=green4
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate properties
-#spring.jpa.hibernate.ddl-auto=create  #Crea tablas, borra registros
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=create 
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
